--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,1 +1,49 @@
-<h1>トップページ</h1>
+<!--<!DOCTYPE html>-->
+<!--<html lang="ja">-->
+
+<!--<head>-->
+<!--  <meta charset="UTF-8">-->
+<!--  <link rel="stylesheet" href="homes.scss" />-->
+<!--    <title>Bookers2Ver2</title>-->
+<!--    <meta name="csrf-param" content="authenticity_token" />-->
+<!--<meta name="csrf-token" content="eis6u8vbEWn2bq1kBJUaC7rwuEw/Jzo3Xf4NzBvuTkz50fiK82Boc7hhXRUxS7SUYgfqZ8ilz/rnt5IDGXICPA==" />-->
+
+<!--    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">-->
+<!--    <link rel="stylesheet" media="all" href="homes.scss" data-turbolinks-track="reload" />-->
+<!--    <script src="/assets/application-7c6c6c3f314bb8752b61012919f95cf505bc03215161bf26d97bb4898566bb0e.js" data-turbolinks-track="reload"></script>-->
+<!--  </head>-->
+
+
+      <main>
+        <p id="notice"></p>
+        <div class="container">
+  <div class="row">
+    <div class='mx-auto col-11 col-sm-10 col-lg-8 col-xl-6'>
+      <h1>welcome to <i class="fas fa-book"></i><strong>Bookers</strong>  !!</h1>
+      <p>In  <i class="fas fa-book"></i><strong>Bookers</strong>, </p>
+      <p>you can share and exchange  your opinions , inpressions , and emotions</p>
+      <p> about various books!</p>
+      <div class="btn-wrapper col-10 mx-auto">
+        <div class="row">
+          <a class="btn btn-info btn-sm btn-block mb-3 sign_in" href="/users/sign_in">Log in</a>
+        </div>
+        <div class="row">
+          <a class="btn btn-success btn-sm btn-block sign_up" href="/users/sign_up">Sign Up</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+      </main>
+    <footer>
+  <div class='container mt-5'>
+  	<div class='row'>
+    	<div class='mx-auto'>
+    		<p>CopyRight Infratop.inc</p>
+    	</div>
+    </div>
+  </div>
+</footer>
+
