--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -2,272 +2,152 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-:root {
-    --blue: #007bff;
-    --indigo: #6610f2;
-    --purple: #6f42c1;
-    --pink: #e83e8c;
-    --red: #dc3545;
-    --orange: #fd7e14;
-    --yellow: #ffc107;
-    --green: #28a745;
-    --teal: #20c997;
-    --cyan: #17a2b8;
-    --white: #fff;
-    --gray: #6c757d;
-    --gray-dark: #343a40;
-    --primary: #007bff;
-    --secondary: #6c757d;
-    --success: #28a745;
-    --info: #17a2b8;
-    --warning: #ffc107;
-    --danger: #dc3545;
-    --light: #f8f9fa;
-    --dark: #343a40;
-    --breakpoint-xs: 0;
-    --breakpoint-sm: 576px;
-    --breakpoint-md: 768px;
-    --breakpoint-lg: 992px;
-    --breakpoint-xl: 1200px;
-    --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-}
 
-html {
-    font-family: sans-serif;
-    line-height: 1.15;
-}
+// * {
+//     box-sizing: border-box;
+// }
 
-*, *::before, *::after {
-    box-sizing: border-box;
-}
+// .bg-dark {
+//     background-color: #343a40 !important;
+// }
 
-html {
-    display: block;
-}
+// .navbar {
+//     position: relative;
+//     display: flex;
+//     flex-wrap: wrap;
+//     align-items: center;
+//     justify-content: space-between;
+//     padding: 0.5rem 1rem;
+// }
 
-title {
-    display: none;
-}
+// body {
+//     margin: 0;
+//     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+//     font-size: 1rem;
+//     font-weight: 400;
+//     color: #212529;
+//     text-align: left;
+//     background-color: #fff;
+// }
 
-.bg-dark {
-    background-color: #343a40 !important;
-}
+// .navbar .container, .navbar .container-fluid, .navbar .container-sm, .navbar .container-md, .navbar .container-lg, .navbar .container-xl {
+//     display: flex;
+//     flex-wrap: wrap;
+//     align-items: center;
+//     justify-content: space-between;
+// }
 
-.navbar {
-    position: relative;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0.5rem 1rem;
-}
+// .container, .container-fluid, .container-xl, .container-lg, .container-md, .container-sm {
+//     width: 100%;
+//     padding-right: 15px;
+//     padding-left: 15px;
+//     margin-right: auto;
+//     margin-left: auto;
+// }
 
-body {
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    color: #212529;
-    text-align: left;
-    background-color: #fff;
-}
+// .navbar-dark .navbar-brand {
+//     color: #fff;
+// }
 
-.navbar .container, .navbar .container-fluid, .navbar .container-sm, .navbar .container-md, .navbar .container-lg, .navbar .container-xl {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-}
+// .navbar-brand {
+//     display: inline-block;
+//     padding-top: 0.3125rem;
+//     padding-bottom: 0.3125rem;
+//     margin-right: 1rem;
+//     font-size: 1.25rem;
+//     line-height: inherit;
+//     white-space: nowrap;
+// }
 
-.container, .container-fluid, .container-xl, .container-lg, .container-md, .container-sm {
-    width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
-}
+// .navbar-dark .navbar-toggler {
+//     color: rgba(255,255,255,0.5);
+//     border-color: rgba(255,255,255,0.1);
+// }
 
-.navbar-dark .navbar-brand {
-    color: #fff;
-}
+// .navbar-toggler {
+//     padding: 0.25rem 0.75rem;
+//     font-size: 1.25rem;
+//     line-height: 1;
+//     background-color: transparent;
+//     border: 1px solid transparent;
+//     border-radius: 0.25rem;
+// }
+// .collapse:not(.show) {
+//     display: none;
+// }
 
+// .navbar-collapse {
+//     flex-basis: 100%;
+//     flex-grow: 1;
+//     align-items: center;
+// }
+
+// .navbar-nav {
+//     display: flex;
+//     flex-direction: column;
+//     padding-left: 0;
+//     margin-bottom: 0;
+//     list-style: none;
+// }
+
+
+// .collapse:not(.show) {
+//     display: none;
+// }
+
+// .navbar-collapse {
+//     flex-basis: 100%;
+//     flex-grow: 1;
+//     align-items: center;
+// }
+
+// #notice {
+//     color: green;
+// }
+
+// * {
+//     box-sizing: border-box;
+// }
+
+// .container, .container-fluid, .container-xl, .container-lg, .container-md, .container-sm {
+//     width: 100%;
+//     padding-right: 15px;
+//     padding-left: 15px;
+//     margin-right: auto;
+//     margin-left: auto;
+// }
+
+// .mt-5, .my-5 {
+//     margin-top: 3rem !important;
+// }
+
+// .row {
+//     display: flex;
+//     flex-wrap: wrap;
+//     margin-right: -15px;
+//     margin-left: -15px;
+// }
+
+// .navbar-nav .nav-link {
+//     padding-right: 0;
+//     padding-left: 0;
+// }
+
+// .fa, .fas {
+//     font-family: 'Font Awesome 5 Free';
+//     font-weight: 600;
+//     line-height: normal;
+// }
+
+// .fa, .fas, .far, .fal, .fad, .fab {
+//     -webkit-font-smoothing: antialiased;
+//     display: inline-block;
+//     font-style: normal;
+//     font-variant: normal;
+//     text-rendering: auto;
+// }
 .navbar-brand {
-    display: inline-block;
-    padding-top: 0.3125rem;
-    padding-bottom: 0.3125rem;
-    margin-right: 1rem;
-    font-size: 1.25rem;
-    line-height: inherit;
-    white-space: nowrap;
-}
-
-a {
-    color: #007bff;
-    text-decoration: none;
-    background-color: transparent;
-}
-
-a:-webkit-any-link {
-    cursor: pointer;
-}
-
-.navbar-dark .navbar-toggler {
-    color: rgba(255,255,255,0.5);
-    border-color: rgba(255,255,255,0.1);
-}
-
-button:not(:disabled), [type="button"]:not(:disabled), [type="reset"]:not(:disabled), [type="submit"]:not(:disabled) {
-    cursor: pointer;
-}
-
-.navbar-toggler {
-    padding: 0.25rem 0.75rem;
-    font-size: 1.25rem;
-    line-height: 1;
-    background-color: transparent;
-    border: 1px solid transparent;
-    border-radius: 0.25rem;
-}
-
-button, select {
-    text-transform: none;
-}
-
-button, input {
-  overflow: visible;
-}
-
-input, button, select, optgroup, textarea {
-  margin: 0;
-  font-family: inherit;
-}
-
-button {
-    -webkit-writing-mode: horizontal-tb !important;
-    text-rendering: auto;
-    letter-spacing: normal;
-    word-spacing: normal;
-    text-indent: 0px;
-    text-shadow: none;
-    display: inline-block;
-    text-align: center;
-    align-items: flex-start;
-    font: 400 13.3333px Arial;
-}
-
-// .collapse:not(.show) {
-//     display: none;
-// }
-
-.navbar-collapse {
-    flex-basis: 100%;
-    flex-grow: 1;
-    align-items: center;
-}
-
-.ml-auto, .mx-auto {
-    margin-left: auto !important;
-}
-
-.navbar-nav {
-    display: flex;
-    flex-direction: column;
-    padding-left: 0;
-    margin-bottom: 0;
-    list-style: none;
-}
-
-ol, ul, dl {
-    margin-top: 0;
-    margin-bottom: 1rem;
-}
-
-ul {
-    display: block;
-    list-style-type: disc;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    padding-inline-start: 40px;
-}
-
-// .collapse:not(.show) {
-//     display: none;
-// }
-
-.navbar-collapse {
-    flex-basis: 100%;
-    flex-grow: 1;
-    align-items: center;
-}
-
-article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
-    display: block;
-}
-
-#notice {
-    color: green;
-}
-
-p {
-    margin-top: 0;
-    margin-bottom: 1rem;
-}
-
-*, *::before, *::after {
-    box-sizing: border-box;
-}
-
-p {
-    display: block;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-}
-
-.container, .container-fluid, .container-xl, .container-lg, .container-md, .container-sm {
-    width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
-}
-
-.mt-5, .my-5 {
-    margin-top: 3rem !important;
-}
-
-.row {
-    display: flex;
-    flex-wrap: wrap;
-    margin-right: -15px;
-    margin-left: -15px;
-}
-
-.navbar-nav .nav-link {
-    padding-right: 0;
-    padding-left: 0;
-}
-
-.fa, .fas {
-    font-family: 'Font Awesome 5 Free';
-    font-weight: 600;
-    line-height: normal;
-}
-
-.fa, .fas, .far, .fal, .fad, .fab {
-    -webkit-font-smoothing: antialiased;
-    display: inline-block;
-    font-style: normal;
-    font-variant: normal;
-    text-rendering: auto;
-}
-
-.text-light {
-    color: #f8f9fa !important;
+margin-right: 16px;
+padding-bottom: 5px;
 }
 
