--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
           <li><a class="fas fa-users nav-link text-light" href="/users"> Users</a></li>
           <li><a class="fas fa-book-open nav-link text-light" href="/books"> Books</a></li>
           <li><a class="fas fa-sign-out-alt nav-link text-light" rel="nofollow" data-method="delete" href="/users/sign_out"> logout</a></li>
+          <li><%= link_to 'マイページ', user_path(current_user.id) %> </li>
          <% else %>
            <p>
              <%= link_to root_path do %>
