--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,6 @@
     <title>Bookers2</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <script src="https://kit.fontawesome.com/2d5198c15a.js" crossorigin="anonymous"></script>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
@@ -15,11 +14,14 @@
       <a class="navbar-brand" href="/"><span>Bookers</span></a>
         <div class="ml-auto nav-style">
           <% if user_signed_in? %>
-          <li><a class="fas fa-home nav-link text-light" href=/top><p class="text-light">Home</p></a></li>
-          <li><a class="fas fa-users nav-link text-light" href="/users"> Users</a></li>
-          <li><a class="fas fa-book-open nav-link text-light" href="/books"> Books</a></li>
-          <li><a class="fas fa-sign-out-alt nav-link text-light" rel="nofollow" data-method="delete" href="/users/sign_out"> logout</a></li>
-          <li><%= link_to 'マイページ', user_path(current_user.id) %> </li>
+          <li><%= link_to 'Home', user_path(current_user.id), class: "fas fa-home nav-link text-light" %></li>
+
+          <li><%= link_to 'Users', users_path, class: "fas fa-users nav-link text-light" %></li>
+
+          <li><%= link_to 'Books', books_path, class:" fas fa-book-open nav-link text-light" %></li>
+
+          <li><%= link_to 'logout', destroy_user_session_path, method: :delete, class: "fas fa-sign-out-alt nav-link text-light" %></li>
+
          <% else %>
            <p>
              <%= link_to root_path do %>
@@ -28,17 +30,17 @@
            </p>
          　<p>
          　  <%= link_to root_path do %>
-            <span class="fas fa-users text-light">Users</span>
+            <span class="fas fa-users text-light">About</span>
             <% end %>
           　</p>
           　 <p>
           　    <%= link_to root_path do %>
-            <span class="fas fa-book-open text-light">Books</span>
+            <span class="fas fa-book-open text-light">signup</span>
             <% end %>
           　</p>
           　 <p>
           　    <%= link_to root_path do %>
-            <span class="fas fa-sign-out-alt text-light">logout</span>
+            <span class="fas fa-sign-out-alt text-light">login</span>
             <% end %>
           　</p>
         　<% end %>
