--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
-<!--usersのshowページ-->
-<main>
+<!--Userの一覧-->
+ <main>
         <p id="notice"></p>
         <div class='container px-5 px-sm-0'>
   <div class='row'>
@@ -13,15 +13,15 @@
   </tr>
   <tr>
 	  <th>introduction</th>
-	  <th>Hello!!</th>
+	  <th></th>
   </tr>
 </table>
 
 <div class='row'>
-  <a class="btn btn-outline-secondary btn-block fas fa-user-cog edit_user_8683" href="/users/8683/edit"></a>
+  <a class="btn btn-outline-secondary btn-block fas fa-user-cog edit_user_8678" href="/users/8678/edit"></a>
 </div>
       <h2 class="mt-3">New book</h2>
-      <form action="/books" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="&#x2713;" /><input type="hidden" name="authenticity_token" value="aZugbbfb7Mj5dsLAaYuYucHvjg3KYhad9XhCXSVNAQBF4KBL4cPEws7UGBbAgMx5i2/hGqh6axmFmYtx4iM1zQ==" />
+      <form action="/books" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="&#x2713;" /><input type="hidden" name="authenticity_token" value="LjfsJzvuccBLWCz4s9N1K4o9vI4fC/3lQuv4Z9QxJ6QCTOwBbfZZynz69i4a2CHrwL3TmX0TgGEyCjFLE18TaQ==" />
   <div class="form-group">
     <label for="book_title">Title</label>
     <input class="form-control book_title" type="text" name="book[title]" id="book_title" />
@@ -37,29 +37,28 @@
 </form>
     </div>
     <div class='col-md-8 offset-md-1'>
-      <h2>Books</h2>
-      <table class='table table-hover table-inverse'>
+      <h2>Users</h2>
+      <table class='table'>
   <thead>
     <tr>
-      <th></th>
-      <th>Title</th>
-      <th>Opinion</th>
+      <th>image</th>
+      <th>name</th>
       <th colspan="3"></th>
     </tr>
   </thead>
   <tbody>
-      <tr>
-        <td><a href="/users/8683">
-          <img class="attachment user profile_image fallback" src="/assets/no-image-icon-d3f9e11cb2bb284b42e0810f94b03c50126f51f482ea43054b87c2b7ebaa01d5.jpg" />
-</a>        </td>
-        <td><a class="book_7439" href="/books/7439">リーダブルコード</a></td>
-        <td>より良いコードを書くためのシンプルで実践的なテクニック。</td>
-      </tr>
+     <% @users.each do |user| %>
+    <tr>
+        <td><img class="attachment user profile_image fallback" src="/assets/no-image-icon-d3f9e11cb2bb284b42e0810f94b03c50126f51f482ea43054b87c2b7ebaa01d5.jpg" /></td>
+     <td><%= user.name %></td>
+      <td><%= link_to "Show", user_path(user.id) %></td>
+    </tr>
+      <% end %>
   </tbody>
 </table>
+
     </div>
   </div>
 </div>
-      </main>
-<!--usersのshowページ-->
-
+</main>
+<!--Userの一覧-->
