--- a/app/views/homes/show.html.erb
+++ b/app/views/homes/show.html.erb
@@ -5,15 +5,15 @@
   <div class='row'>
     <div class='col-md-3'>
       <h2>User info</h2>
-      <table class='table'>
-  <tr><img class="attachment user profile_image fallback" src="/assets/no_image-ede28af4bad96368ef41be1b4be1cffce0d9402540f75d17895e32cb0d2af5e6.jpg" /></tr>
+      <tr><%= attachment_image_tag(@user, :profile_image, fallback: "No_image.jpg", size: "100x100") %></tr>
   <tr>
-	  <th>name</th>
-	  <th></th>
+  <tr>
+    <th>name</tr>
+    <%= current_user.name %>
   </tr>
   <tr>
 	  <th>introduction</th>
-	  <th>Hello!!</th>
+	  <th><%= current_user.introduction %></th>
   </tr>
 </table>
 
@@ -21,20 +21,26 @@
   <a class="btn btn-outline-secondary btn-block fas fa-user-cog edit_user_8683" href="/users/8683/edit"></a>
 </div>
       <h2 class="mt-3">New book</h2>
-      <form action="/books" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="&#x2713;" /><input type="hidden" name="authenticity_token" value="aZugbbfb7Mj5dsLAaYuYucHvjg3KYhad9XhCXSVNAQBF4KBL4cPEws7UGBbAgMx5i2/hGqh6axmFmYtx4iM1zQ==" />
-  <div class="form-group">
-    <label for="book_title">Title</label>
-    <input class="form-control book_title" type="text" name="book[title]" id="book_title" />
+  <%= form_with model:@book, local:true do |f| %>
+  <% if @book.errors.any? %>
+  <%= @book.errors.count %> error prohibited this book from being saved:
+  <% @book.errors.full_messages.each do |message| %>
+  <%= message %>
+   <% end %>
+  <% end %>
+    Title
+  <div class="field">
+   <%= f.text_field :Title %>
   </div>
-  <div class="form-group">
-    <label for="book_opinion">Opinion</label>
-    <textarea class="form-control book_body" name="book[body]" id="book_body">
-</textarea>
+    Opinion
+  <div class="field">
+  <%= f.text_area :Opinion %>
+  <th colspan="3"></th>
   </div>
-  <div class="form-group">
-    <input type="submit" name="commit" value="Create Book" class="btn btn-success" data-disable-with="Create Book" />
+  <div class="actions">
+   <%= f.submit 'Create Book' %>
   </div>
-</form>
+<% end %>
     </div>
     <div class='col-md-8 offset-md-1'>
       <h2>Books</h2>
@@ -52,8 +58,12 @@
         <td><a href="/users/8683">
           <img class="attachment user profile_image fallback" src="/assets/no-image-icon-d3f9e11cb2bb284b42e0810f94b03c50126f51f482ea43054b87c2b7ebaa01d5.jpg" />
 </a>        </td>
-        <td><a class="book_7439" href="/books/7439">リーダブルコード</a></td>
-        <td>より良いコードを書くためのシンプルで実践的なテクニック。</td>
+        <tr>
+        <% @books.each do |book| %>
+         <td><%= book.title %></td>
+         <td><%= link_to "title", book_path(book.id) %></td>
+    </tr>
+        <% end %>
       </tr>
   </tbody>
 </table>
