--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,31 +6,40 @@
     <div class='col-md-3'>
       <h2>User info</h2>
       <table class='table'>
-  <tr><img class="attachment user profile_image fallback" src="/assets/no_image-ede28af4bad96368ef41be1b4be1cffce0d9402540f75d17895e32cb0d2af5e6.jpg" /></tr>
+   <tr><%= attachment_image_tag(@user, :profile_image,fallback: "No_image.jpg", size: "100x100") %></tr>
   <tr>
-	  <th>name</th>
-	  <th></th>
+    <th>name</tr>
+    <%= current_user.name %>
   </tr>
   <tr>
 	  <th>introduction</th>
-	  <th></th>
+	  <th><%= current_user.introduction %></th>
+  </tr>
   </tr>
 </table>
 
 <div class='row'>
   <a class="btn btn-outline-secondary btn-block fas fa-user-cog edit_user_8678" href="/users/8678/edit"></a>
 </div>
-      <h2 class="mt-3">New book</h2>
-      <form action="/books" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="&#x2713;" /><input type="hidden" name="authenticity_token" value="LjfsJzvuccBLWCz4s9N1K4o9vI4fC/3lQuv4Z9QxJ6QCTOwBbfZZynz69i4a2CHrwL3TmX0TgGEyCjFLE18TaQ==" />
-  <div class="form-group">
-    <label for="book_title">Title</label>
-    <input class="form-control book_title" type="text" name="book[title]" id="book_title" />
+        <h2 class="mt-3">New book</h2>
+      <%= form_with model:@book, local:true do |f| %>
+  <% if @book.errors.any? %>
+  <%= @book.errors.count %> error prohibited this book from being saved:
+  <% @book.errors.full_messages.each do |message| %>
+  <%= message %>
+   <% end %>
+  <% end %>
+    Title
+  <div class="field">
+   <%= f.text_field :Title %>
   </div>
-  <div class="form-group">
-    <label for="book_opinion">Opinion</label>
-    <textarea class="form-control book_body" name="book[body]" id="book_body">
-</textarea>
+    Opinion
+  <div class="field">
+  <%= f.text_area :Opinion %>
+  <th colspan="3"></th>
   </div>
+<% end %>
+</form>
   <div class="form-group">
     <input type="submit" name="commit" value="Create Book" class="btn btn-success" data-disable-with="Create Book" />
   </div>
@@ -42,6 +51,8 @@
   <thead>
     <tr>
       <th>image</th>
+      <tr><%= attachment_image_tag(@user, :profile_image, fallback: "No_image.jpg", size: "100x100") %></tr>
+  <tr>
       <th>name</th>
       <th colspan="3"></th>
     </tr>
