--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -51,8 +51,6 @@
   <thead>
     <tr>
       <th>image</th>
-      <tr><%= attachment_image_tag(@user, :profile_image, fallback: "No_image.jpg", size: "100x100") %></tr>
-  <tr>
       <th>name</th>
       <th colspan="3"></th>
     </tr>
@@ -60,7 +58,7 @@
   <tbody>
      <% @users.each do |user| %>
     <tr>
-     <td><img class="attachment user profile_image fallback" src="/assets/no-image-icon-d3f9e11cb2bb284b42e0810f94b03c50126f51f482ea43054b87c2b7ebaa01d5.jpg" /></td>
+     <td><%= attachment_image_tag(@user, :profile_image,fallback: "No_image.jpg", size: "50x50") %></td>
      <td><%= user.name %></td>
       <td><%= link_to "Show", user_path(user.id) %></td>
     </tr>
