--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -5,17 +5,20 @@
 
   <div class='row'>
     <div class='col-md-3'>
-      <h2>User info</h2>
+       <h2>User info</h2>
+      <div><%= attachment_image_tag(@user, :profile_image, fallback: "No_image.jpg", size: "100x100") %></div>
       <table class='table'>
-  <tr><%= attachment_image_tag(@user, :profile_image, fallback: "No_image.jpg", size:"100x100") %></tr>
-  <tr>
-    <th>name</tr>
-    <%= current_user.name %>
+          <tbody>
+              <tr>
+    <th>name</th>
+    <td><%= current_user.name %></td>
   </tr>
   <tr>
 	  <th>introduction</th>
 	  <th><%= current_user.introduction %></th>
   </tr>
+  </tr>
+  </tbody>
 </table>
 
 <div class='row'>
@@ -42,21 +45,37 @@
     <input type="submit" name="commit" value="Create Book" class="btn btn-success" data-disable-with="Create Book" />
   </div>
 <% end %>
-
+ </div>
+ <div class='col-md-8 offset-md-1'>
+      <h2>Books</h2>
+      <table class='table'>
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Opinion</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
   <tbody>
-      <tr>
-        <% @books.each do |book| %>
-         <td><%= book.title %></td>
-      <td><%= link_to "title", book_path(book.id) %></td>
+     <% @books.each do |book| %>
+    <tr>
+     <td><%= attachment_image_tag(@user, :profile_image,fallback: "No_image.jpg", size: "50x50") %></td>
+     <td><%= book.title %></td>
+      <td><%= link_to "title", books_path(books.id) %></td>
     </tr>
       <% end %>
-       </td>
-
-      </tr>
   </tbody>
 </table>
-    </div>
   </div>
 </div>
       </main>
+          <footer>
+  <div class='container mt-5'>
+  	<div class='row'>
+    	<div class='mx-auto'>
+    		<p>CopyRight Infratop.inc</p>
+    	</div>
+    </div>
+  </div>
+</footer>
 <!--booksの一覧-->
