--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,15 +5,19 @@
   <div class='row'>
     <div class='col-md-3'>
       <h2>User info</h2>
+      <div><%= attachment_image_tag(@user, :profile_image, fallback: "No_image.jpg", size: "100x100") %></div>
       <table class='table'>
-      <tr><%= attachment_image_tag(@user, :profile_image, fallback: "No_image.jpg", size: "100x100") %></tr>
+          <tbody>
+              <tr>
+    <th>name</th>
+    <td><%= current_user.name %></td>
+  </tr>
   <tr>
-    <th>name</tr>
-    <tr><%= current_user.name %></tr>
-  </th>
 	  <th>introduction</th>
 	  <th><%= current_user.introduction %></th>
   </tr>
+  </tr>
+  </tbody>
 </table>
 
 <div class='row'>
