--- a/app/views/homes/show.html.erb
+++ b/app/views/homes/show.html.erb
@@ -3,45 +3,7 @@
         <p id="notice"></p>
         <div class='container px-5 px-sm-0'>
   <div class='row'>
-    <div class='col-md-3'>
-      <h2>User info</h2>
-      <tr><%= attachment_image_tag(@user, :profile_image, fallback: "No_image.jpg", size: "100x100") %></tr>
-  <tr>
-  <tr>
-    <th>name</tr>
-    <%= current_user.name %>
-  </tr>
-  <tr>
-	  <th>introduction</th>
-	  <th><%= current_user.introduction %></th>
-  </tr>
-</table>
-
-<div class='row'>
-  <a class="btn btn-outline-secondary btn-block fas fa-user-cog edit_user_8683" href="/users/8683/edit"></a>
-</div>
-      <h2 class="mt-3">New book</h2>
-  <%= form_with model:@book, local:true do |f| %>
-  <% if @book.errors.any? %>
-  <%= @book.errors.count %> error prohibited this book from being saved:
-  <% @book.errors.full_messages.each do |message| %>
-  <%= message %>
-   <% end %>
-  <% end %>
-    Title
-  <div class="field">
-   <%= f.text_field :Title %>
-  </div>
-    Opinion
-  <div class="field">
-  <%= f.text_area :Opinion %>
-  <th colspan="3"></th>
-  </div>
-  <div class="actions">
-   <%= f.submit 'Create Book' %>
-  </div>
-<% end %>
-    </div>
+     <%= render 'users/sidemenu'%>
     <div class='col-md-8 offset-md-1'>
       <h2>Books</h2>
       <table class='table table-hover table-inverse'>
