--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,48 +3,7 @@
         <p id="notice"></p>
         <div class='container px-5 px-sm-0'>
   <div class='row'>
-    <div class='col-md-3'>
-      <h2>User info</h2>
-      <div><%= attachment_image_tag(@user, :profile_image, fallback: "No_image.jpg", size: "100x100") %></div>
-      <table class='table'>
-          <tbody>
-              <tr>
-    <th>name</th>
-    <td><%= current_user.name %></td>
-  </tr>
-  <tr>
-	  <th>introduction</th>
-	  <th><%= current_user.introduction %></th>
-  </tr>
-  </tr>
-  </tbody>
-</table>
-
-<div class='row'>
-
-</div>
-      <h2 class="mt-3">New book</h2>
-      <%= form_with model:@book, local:true do |f| %>
-  <% if @book.errors.any? %>
-  <%= @book.errors.count %> error prohibited this book from being saved:
-  <% @book.errors.full_messages.each do |message| %>
-  <%= message %>
-   <% end %>
-  <% end %>
-    Title
-  <div class="field">
-   <%= f.text_field :Title %>
-  </div>
-    Opinion
-  <div class="field">
-  <%= f.text_area :Opinion %>
-  </div>
-  <div class="actions">
-     <input type="submit" name="commit" value="Create Book" class="btn btn-success" data-disable-with="Create Book" />
-  </div>
-<% end %>
-
-</form>
+    <%= render 'sidemenu' %>
     </div>
     <div class='col-md-8 offset-md-1'>
       <h2>Books</h2>
