--- a/app/views/users/_sidemenu.html.erb
+++ b/app/views/users/_sidemenu.html.erb
@@ -34,8 +34,8 @@
   <%= f.text_area :Opinion %>
   <th colspan="3"></th>
   </div>
-  <div class="actions">
-      <a class="btn btn-outline-secondary btn-block fas fa-user-cog edit_user_8678" href="/users/8678/edit"></a>
+ <div class="form-group">
+    <input type="submit" name="commit" value="Create Book" class="btn btn-success" data-disable-with="Create Book" />
   </div>
 <% end %>
     </div>
