--- a/app/views/homes/show.html.erb
+++ b/app/views/homes/show.html.erb
@@ -17,9 +17,9 @@
   </thead>
   <tbody>
       <tr>
-        <td><a href="/users/8683">
-          <img class="attachment user profile_image fallback" src="/assets/no-image-icon-d3f9e11cb2bb284b42e0810f94b03c50126f51f482ea43054b87c2b7ebaa01d5.jpg" />
-</a>        </td>
+        <td>
+          <tr><%= attachment_image_tag(@users, :profile_image, fallback: "No_image.jpg", size: "100x100") %></tr>
+        </td>
         <tr>
         <% @books.each do |book| %>
          <td><%= book.title %></td>
