--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,11 +1,31 @@
-<h1>User Info</h1>
-<!-- form_with部分 -->
-<%= form_with model:@user, local: true do |f| %>
-  <h4>Name</h4>
-  <%= f.text_field :name %>
-  <h4>Image</h4>
-  <%= f.text_field :image %>
-  <h4>Introduction</h4>
-  <%= f.text_area :introduction %>
-  <%= f.submit 'Update User' %>
-<% end %>
+ <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+    <h2>User info</h2>
+    <form enctype="multipart/form-data" action="/users/8994" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="&#x2713;" /><input type="hidden" name="_method" value="patch" /><input type="hidden" name="authenticity_token" value="kgF2s9vTLpYd/9i7vhyZ5NmHKWgeARg5gfLAk2KdOUMOZQAQQtHNNI9U8Yi0xJ07Of++ZPaLZ/dZ+qhNiZiF6A==" />
+
+    <div class="form-group">
+     <!-- form_with部分 -->
+      <%= form_with model:@user, local: true do |f| %>
+       <h4>Name</h4>
+        <%= f.text_field :name %>
+    </div>
+    <div class="form-group">
+     <h4>Image</h4>
+     <div> <%= f.submit 'ファイルを選択' %> </div>
+      <div class="form-group">
+       　<h4>Introduction</h4>
+           <%= f.text_area :introduction %>
+      </div>
+      <div class="form-group">
+         <%= f.submit 'Update User', class: "btn btn-secondary" %>
+　　　　　<% end %>
+      </div>
+
+    <footer>
+  <div class='container mt-5'>
+  	<div class='row'>
+    	<div class='mx-auto'>
+    		<p>CopyRight Infratop.inc</p>
+    	</div>
+    </div>
+  </div>
+</footer>
