--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -32,4 +32,12 @@
 </div>
       </main>
 <!--usersのshowページ-->
-
+ <footer>
+  <div class='container mt-5'>
+  	<div class='row'>
+    	<div class='mx-auto'>
+    		<p>CopyRight Infratop.inc</p>
+    	</div>
+    </div>
+  </div>
+</footer>
