--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -37,3 +37,12 @@
   </div>
 </footer>
 <!--booksの一覧-->
+ <footer>
+  <div class='container mt-5'>
+  	<div class='row'>
+    	<div class='mx-auto'>
+    		<p>CopyRight Infratop.inc</p>
+    	</div>
+    </div>
+  </div>
+</footer>
