--- a/app/views/users/_sidemenu.html.erb
+++ b/app/views/users/_sidemenu.html.erb
@@ -27,11 +27,11 @@
   <% end %>
     Title
   <div class="field">
-   <%= f.text_field :Title %>
+   <%= f.text_field :title %>
   </div>
     Opinion
   <div class="field">
-  <%= f.text_area :Opinion %>
+  <%= f.text_area :opinion %>
   <th colspan="3"></th>
   </div>
  <div class="form-group">
