--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,7 +3,7 @@
         <p id="notice"></p>
         <div class='container'>
   <div class='row'>
- <%= render 'users/sidemenu'%>
+ <%= render 'users/sidemenu', book: @book, user: @user %>
     <div class='col-md-8 offset-md-1'>
   		<h2>Book detail</h2>
     <tr>
