--- a/app/views/users/_sidemenu.html.erb
+++ b/app/views/users/_sidemenu.html.erb
@@ -1,6 +1,6 @@
  <div class='col-md-3'>
       <h2>User info</h2>
-      <div><%= attachment_image_tag(@user, :profile_image, fallback: "No_image.jpg", size: "100x100") %></div>
+      <div><%= attachment_image_tag(user, :profile_image, fallback: "No_image.jpg", size: "100x100") %></div>
   <table class='table'>
    <tbody>
   <tr>
@@ -15,16 +15,10 @@
 </table>
 
 <div class='row'>
-  <%= link_to "", edit_user_path(@user.id), class: 'btn btn-outline-secondary btn-block fas fa-user-cog' %>
+  <%= link_to "", edit_user_path(user.id), class: 'btn btn-outline-secondary btn-block fas fa-user-cog' %>
 </div>
     <h2 class="mt-3">New book</h2>
-      <%= form_with model:@book, local:true do |f| %>
-  <% if @book.errors.any? %>
-  <%= @book.errors.count %> error prohibited this book from being saved:
-  <% @book.errors.full_messages.each do |message| %>
-  <%= message %>
-   <% end %>
-  <% end %>
+      <%= form_with model: book, local:true do |f| %>
     Title
   <div class="field">
    <%= f.text_field :title %>
@@ -35,7 +29,7 @@
   <th colspan="3"></th>
   </div>
  <div class="form-group">
-    <input type="submit" name="commit" value="Create Book" class="btn btn-success" data-disable-with="Create Book" />
+   <%= f.submit 'Create Book', class:"btn btn-success" %>
   </div>
 <% end %>
     </div>
