--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,10 @@
  <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+   <% if @user.errors.any? %>
+  <%= @user.errors.count %> error prohibited this book from being saved:
+  <% @user.errors.full_messages.each do |message| %>
+  <%= message %>
+   <% end %>
+  <% end %>
     <h2>User info</h2>
      <!-- form_with部分 -->
       <%= form_with model:@user, local: true do |f| %>
