--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -15,7 +15,7 @@
 
      <div>
        <h4>Opinion</h4>
-         <%= f.text_area :Opinion, size: "3x3", class: "form-control" %>
+         <%= f.text_area :opinion, size: "3x3", class: "form-control" %>
 　　 </div>
 
 　　 <div>
