--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,17 +29,17 @@
             <% end %>
            </p>
          　<p>
-         　  <%= link_to root_path do %>
+         　  <%= link_to home_about_path do %>
             <span class="fas fa-users text-light">About</span>
             <% end %>
           　</p>
           　 <p>
-          　    <%= link_to root_path do %>
+          　    <%= link_to new_user_registration_path do %>
             <span class="fas fa-book-open text-light">signup</span>
             <% end %>
           　</p>
           　 <p>
-          　    <%= link_to root_path do %>
+          　    <%= link_to new_user_session_path do %>
             <span class="fas fa-sign-out-alt text-light">login</span>
             <% end %>
           　</p>
