--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -14,7 +14,7 @@
     　　　　　 <br><%= link_to @user.name, user_path(@user.id) %>
     　　　　</td>
      　   <td><%= link_to @book.title, books_path(@book.id)%></td>
-         <td><%= @book.opinion %></td>
+         <td><%= @book.body %></td>
          <% if @book.user_id == current_user.id %>
           <td> <%= link_to "Edit", edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
   		      <td> <%= link_to "Destroy", book_path(@book), method: :delete, class: "btn btn-sm btn-danger", data: { confirm: '本当に消しますか？' }%></td>
