--- a/app/views/users/_sidemenu.html.erb
+++ b/app/views/users/_sidemenu.html.erb
@@ -25,7 +25,7 @@
   </div>
     Opinion
   <div class="field">
-  <%= f.text_area :opinion %>
+  <%= f.text_area :body %>
   <th colspan="3"></th>
   </div>
  <div class="form-group">
